--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^16.3.0",
     "@types/react-dom": "^16.3.0",
+    "axios": "^1.5.0",
     "radium": "^0.26.2",
     "react": "^16.3.0",
     "react-dom": "^16.3.0",
